c2c/examples/type_warnings.c2
package type_warnings;

utils.foo[] bla; // error: unknown package

main bliep; // error: main is not a type

type Number int;

Number b;

func void test1() { }

func int test2(int a, int b) { }

func Bar test3(Foo bar, int* intp) {} // error: Foo and Bar are unknown symbols

func Number test4(Number* n) {}

func void test5(main* a, bla b) {} // error: main and bla are not types

public func void main() {
    int a = (int) 10;
}

public func Number func1() {} // error: cannot have public function with non-public return type

public func void func2(Number n) {} // error: cannot have public function with non-public argument type

public Number number;
public type_warnings.Number number2; // error: cannot have public var with non-public type

public type PubNumber Number*; // error cannot have non-public base type in public var

// ok
public type Faa int;
public func Faa func3(Faa f1) {}

